Fixed bugs in expanding/collapsing result list

--- a/css/main.css
+++ b/css/main.css
@@ -129,9 +129,13 @@ a.noline:hover {
 }
 
 .category_title {
-	font-weight: bold;
-	font-size: 1.0em;
 	width: 100%;
+	/*
+	overflow: hidden; 
+	white-space: nowrap; 
+	text-overflow: ellipsis;
+	*/
+	cursor: pointer;
 }
 
 .idea {
